Этап 3. Добавляем рекомендательный сервис Исправлены ошибки сервиса статистики