@@ -2,13 +2,14 @@ package ru.practicum.service.impl;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.util.Pair;
 import org.springframework.stereotype.Service;
 import ru.practicum.entity.EventSimilarity;
 import ru.practicum.entity.UserAction;
-import ru.practicum.grpc.stats.message.InteractionsCountRequestProto;
 import ru.practicum.grpc.stats.message.RecommendedEventProto;
-import ru.practicum.grpc.stats.message.SimilarEventsRequestProto;
-import ru.practicum.grpc.stats.message.UserPredictionsRequestProto;
 import ru.practicum.repository.EventSimilarityRepository;
 import ru.practicum.repository.UserActionRepository;
 import ru.practicum.service.RecommendationService;
@@ -22,17 +23,13 @@ import java.util.stream.Collectors;
 public class RecommendationServiceImpl implements RecommendationService {
 
     private final UserActionRepository userActionRepository;
-    private final EventSimilarityRepository eventSimilarityRepository;
+    private final EventSimilarityRepository similarityRepository;
 
     @Override
-    public List<RecommendedEventProto> getSimilarEvents(SimilarEventsRequestProto request) {
-        log.info("RecommendationService - получение похожих событий.");
+    public List<RecommendedEventProto> getSimilarEvents(long eventId, long userId, int maxResults) {
+        log.info("RecommendationService - Получение похожих событий для eventId = {} и userId = {}", eventId, userId);
 
-        Long userId = request.getUserId();
-        Long eventId = request.getEventId();
-        int maxResults = request.getMaxResults();
-
-        List<EventSimilarity> similarities = eventSimilarityRepository.findByEventId(eventId);
+        List<EventSimilarity> similarities = similarityRepository.findByEvent(eventId);
 
         List<Long> interactedEvents = userActionRepository.findEventIdsByUserId(userId);
 
@@ -47,91 +44,93 @@ public class RecommendationServiceImpl implements RecommendationService {
                 .collect(Collectors.toList());
     }
 
-
     @Override
-    public List<RecommendedEventProto> getRecommendationsForUser(UserPredictionsRequestProto request) {
-        log.info("RecommendationService - получение рекомендаций");
+    public List<RecommendedEventProto> getRecommendationsForUser(long userId, int maxResults) {
+        log.info("RecommendationService - Получение рекомендаций для userId={}", userId);
 
-        Long userId = request.getUserId();
-        int maxResults = request.getMaxResults();
+        Pageable recentPage = PageRequest.of(0, 10, Sort.by("eventTime").descending());
+        List<UserAction> recent = userActionRepository.findRecentByUserId(userId, recentPage);
+        if (recent.isEmpty()) {
+            return Collections.emptyList();
+        }
 
-        List<UserAction> userActions = userActionRepository.findAllByUserIdOrderByTimestamp(userId);
-
-        List<Long> interactedEventIds = userActions.stream()
+        List<Long> seenEventIds = recent.stream()
                 .map(UserAction::getEventId)
+                .distinct()
                 .toList();
 
-        Set<Long> candidateEventIds = interactedEventIds.stream()
-                .flatMap(eventId -> {
-                    List<EventSimilarity> similarities = eventSimilarityRepository.findByEventAAndEventB(eventId, eventId);
-                    return similarities.stream()
-                            .flatMap(s -> {
-                                Set<Long> events = new HashSet<>();
-                                events.add(s.getEventA());
-                                events.add(s.getEventB());
-                                return events.stream();
-                            });
+        List<Long> alreadyInteracted = userActionRepository.findEventIdsByUserId(userId);
+
+        List<Pair<Long, EventSimilarity>> candidates = seenEventIds.stream()
+                .flatMap(seedId ->
+                        similarityRepository.findByEvent(seedId).stream()
+                                .map(sim -> Pair.of(seedId, sim))
+                )
+                .filter(pair -> {
+                    long seedId = pair.getFirst();
+                    long target = pair.getSecond().getOtherEventId(seedId);
+                    return !alreadyInteracted.contains(target);
                 })
-                .filter(eventId -> !interactedEventIds.contains(eventId))
-                .collect(Collectors.toSet());
+                .toList();
 
+        Map<Long, List<Pair<Long, EventSimilarity>>> grouped = candidates.stream()
+                .collect(Collectors.groupingBy(pair ->
+                        pair.getSecond().getOtherEventId(pair.getFirst())
+                ));
 
-        return candidateEventIds.stream()
-                .map(eventId -> {
-                    List<EventSimilarity> neighbors = eventSimilarityRepository.findByEventAAndEventB(eventId, eventId)
-                            .stream()
-                            .filter(s -> interactedEventIds.contains(s.getEventA()) ||
-                                    interactedEventIds.contains(s.getEventB()))
-                            .sorted(Comparator.comparing(EventSimilarity::getScore).reversed())
-                            .toList();
+        Map<Long, Double> knownWeights = recent.stream()
+                .collect(Collectors.toMap(UserAction::getEventId, UserAction::getWeight));
 
-                    double weightedSum = 0.0;
-                    double similaritySum = 0.0;
-                    for (EventSimilarity neighbor : neighbors) {
-                        long neighborEventId = neighbor.getEventA().equals(eventId) ?
-                                neighbor.getEventB() : neighbor.getEventA();
-                        UserAction action = userActions.stream()
-                                .filter(a -> a.getEventId().equals(neighborEventId))
-                                .findFirst()
-                                .orElse(null);
-                        if (Objects.nonNull(action)) {
-                            weightedSum += neighbor.getScore() * action.getWeight();
-                            similaritySum += neighbor.getScore();
-                        }
-                    }
+        List<RecommendedEventProto> predictions = new ArrayList<>();
+        for (Map.Entry<Long, List<Pair<Long, EventSimilarity>>> entry : grouped.entrySet()) {
+            Long newEventId = entry.getKey();
 
-                    double score = similaritySum > 0 ? weightedSum / similaritySum : 0.0;
+            List<EventSimilarity> neighbors = entry.getValue().stream()
+                    .map(Pair::getSecond)
+                    .sorted(Comparator.comparingDouble(EventSimilarity::getScore).reversed())
+                    .limit(10)
+                    .toList();
 
-                    return RecommendedEventProto.newBuilder()
-                            .setEventId(eventId)
-                            .setScore(score)
-                            .build();
-                })
+            double numerator = 0.0, denominator = 0.0;
+            for (EventSimilarity sim : neighbors) {
+                long knownEventId = sim.getOtherEventId(newEventId);
+                Double weight = knownWeights.get(knownEventId);
+                if (weight == null) {
+                    continue;
+                }
+                numerator += weight * sim.getScore();
+                denominator += sim.getScore();
+            }
+            if (denominator == 0.0) {
+                continue;
+            }
+
+            double predictedScore = numerator / denominator;
+            predictions.add(RecommendedEventProto.newBuilder()
+                    .setEventId(newEventId)
+                    .setScore(predictedScore)
+                    .build());
+        }
+
+        return predictions.stream()
                 .sorted(Comparator.comparingDouble(RecommendedEventProto::getScore).reversed())
-                .limit(maxResults).toList();
+                .limit(maxResults)
+                .toList();
     }
 
-
     @Override
-    public List<RecommendedEventProto> getInteractionsCount(InteractionsCountRequestProto request) {
-        log.info("RecommendationService - подсчет количества взаимодействий");
+    public List<RecommendedEventProto> getInteractionsCount(List<Long> eventIds) {
+        log.info("RecommendationService - Расчет количества взаимодействий для событий = {}", eventIds);
 
-        List<Long> eventIds = request.getEventIdList();
-
-        List<Object[]> weightSums = userActionRepository.sumMaxWeightsByEventIds(eventIds);
-        Map<Long, Double> weights = weightSums.stream()
-                .collect(Collectors.toMap(
-                        row -> (Long) row[0], // event_id
-                        row -> (Double) row[1], // sum of weights
-                        (a, b) -> a
-                ));
-        List<RecommendedEventProto> results = eventIds.stream()
-                .map(eventId -> RecommendedEventProto.newBuilder()
-                        .setEventId(eventId)
-                        .setScore(weights.getOrDefault(eventId, 0.0))
-                        .build())
-                .toList();
-
-        return results.stream().toList();
+        return eventIds.stream()
+                .map(eventId -> {
+                    Double sum = userActionRepository.sumWeightsByEventId(eventId);
+                    double sumWeights = sum != null ? sum : 0.0;
+                    return RecommendedEventProto.newBuilder()
+                            .setEventId(eventId)
+                            .setScore(sumWeights)
+                            .build();
+                })
+                .collect(Collectors.toList());
     }
 }
